--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <h1>Intan Nurmayda Utami</h1>
             <img src="utami1.jpg" alt="Intan Nurmadya Utami">
             <ul>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">skill</a></li>
+                <li><a href="#aboutme">About me</a></li>
+                <li><a href="#skill">skills</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
         </div>
     </header> 
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
         <div class="wrapper">
             <h2>about me</h2>
             <p>
@@ -37,7 +37,7 @@
             <a href="#" download>Download cv</a>
         </div>
     </section>
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="wrapper">
         <h1>SKILLS</h1>
         <p>HTML</p>
