--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="utami1.jpg" alt="Intan Nurmadya Utami">
             <ul>
                 <li><a href="#aboutme">About me</a></li>
-                <li><a href="#skill">skills</a></li>
+                <li><a href="#skills">skills</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
         </div>
