--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                 </div>
 
     </section>
+    <div class="pendidikan">
+      <ul>
+        <li><h1>SDN Rajawali Kota Cirebon</h1></li>
+        <li><h1>MTs N 2 Kota Cirebon</h1></li>
+        <li><h1>MAN 2 Kota Cirebon</h1></li>
+      </ul>
+    </div>
     <footer>
         <p align="center">Copyright @ 2020</p>
         <p align="center">Creator Of Intan Nurmayda Utami</p>
