--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     <section class="skills" id="skills">
         <div class="wrapper">
         <h1>SKILLS</h1>
-        <p>HTML</p>
+        <p>Editing</p>
         <div class="skills html">90%</div>
         </div>
         <div class="wrapper">
-            <p>CSS</p>
+            <p>Ms Office</p>
             <div class="skills css">80%</div>
             </div>
             <div class="wrapper">
-                <p>PHP</p>
+                <p>Masak</p>
                 <div class="skills php">60%</div>
                 </div>
 
