--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     </section>
     <div class="pendidikan">
       <ul>
-        <li><h1>SDN Rajawali Kota Cirebon</h1></li>
-        <li><h1>MTs N 2 Kota Cirebon</h1></li>
-        <li><h1>MAN 2 Kota Cirebon</h1></li>
+        <h1>Pendidikan</h1>
+        <li><h2>SDN Rajawali Kota Cirebon</h2></li>
+        <li><h2>MTs N 2 Kota Cirebon</h2></li>
+        <li><h2>MAN 2 Kota Cirebon</h2></li>
       </ul>
     </div>
     <footer>
