--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         <li><h2>MAN 2 Kota Cirebon</h2></li>
       </ul>
     </div>
+    <div class="contact">
+      <ul>
+        <h1>Kontak</h1>
+        <li><h2>IG: @intannurmayda</h2></li>
+        <li><h2>Email: intanbetterme@gmail.com</h2></li>
+        <li><h2>Youtube: intannurmayda</h2></li>
+      </ul>
+    </div>
     <footer>
         <p align="center">Copyright @ 2020</p>
         <p align="center">Creator Of Intan Nurmayda Utami</p>
